--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,9 +7,15 @@
     </li>
     {% endif %}
 
-    {% if sidebar.phone %}
-    <li class="phone"><i class="fas fa-phone"></i>
-      <a href="tel:{{ sidebar.phone }}">{{ sidebar.phone }}</a>
+    {% if sidebar.phone_KR %}
+    <li class="phone_KR"><i class="fas fa-phone"></i>
+      <a href="tel:{{ sidebar.phone }}">{{ sidebar.phone_KR }}</a>
+    </li>
+    {% endif %}
+
+    {% if sidebar.phone_US %}
+    <li class="phone_US"><i class="fas fa-phone"></i>
+      <a href="tel:{{ sidebar.phone }}">{{ sidebar.phone_US }}</a>
     </li>
     {% endif %}
 
