--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -25,6 +25,7 @@
     {% endif %}
     <div class="publication-authors">{{ publication.authors }}</div>
     <div class="publication-conference">{{ publication.conference }}</div>
+    <div class="publication-year">{{ publication.year }}</div>
   </div><!--//item-->
   {% endfor %}
 
